added vehicle edit endpoint
